# mediapy

./: .gitignore  README.md  mediapy_examples.ipynb  mediapy_examples.py  mediapy_test.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  pytest_and_autopublish.yml
mediapy/: __init__.py
mediapy/html/mediapy/: index.html
pdoc/: make_pdoc.py
pdoc_files/: make.py  module.html.jinja2
pdoc_template/: head.mako  logo.mako
