[project]
name = "mediapy"
description = "Read/write/show images and videos in an IPython notebook"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Google LLC", email="mediapy-owners@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Video :: Display",
]
keywords = []

# pip dependencies of the project
dependencies = [
    "ipython",
    "matplotlib",
    "numpy",
    "Pillow",
]

# This is set automatically by flit using `mediapy.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google/mediapy"
repository = "https://github.com/google/mediapy"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "absl-py",
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[tool.autopep8]
indent_size = 2
max_line_length = 80
ignore = "E121,E125,E126,E129,E226,E302,E305,E501,W504,E741"
aggressive = 3
recursive = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mediapy_test"
ignore_errors = true

[tool.pylint.main]
disable = [
    "unspecified-encoding", "line-too-long", "too-many-lines",
    "too-few-public-methods", "too-many-locals", "too-many-instance-attributes",
    "too-many-branches", "too-many-statements", "using-constant-test",
]
reports = false
score = false
recursive = true

[tool.pylint.basic]
good-names-rgxs = "^[a-z][a-z0-9]?|[A-Z]([A-Z_]*[A-Z])?$"

[tool.pylint.format]
indent-string = "  "
expected-line-ending-format = "LF"
